# storyteller

./: .env  .env.example  .envrc  .gitignore  README.md  app.py  config.yaml  pyproject.toml  requirements.txt  start_storyteller.sh  stop_storyteller.sh
.cursor/rules/: my-dev-rules-standard.mdc
core/: README.md  __init__.py  config.py  database.py  exceptions.py  graph.py  logging_setup.py  worker.py
core/api/: __init__.py  llm.py
core/audio/: tts.py
core/nodes/: render.py  selector.py
core/spider/: hackernews.py  toutiao.py  zhihu.py
db/: studio.db
docs/: SETUP.md  mvp-roadmap.md  storyteller-design-v2.1.md  storyteller-design.md  storyteller-review.md
docs/standards/: engineering-standards.md
models/: README.md
scripts/: add_direnv_hook.sh  fix_zshrc.sh  generate_placeholder_asset.sh  recreate_venv.sh
ui/: README.md  __init__.py  main_window.py
